# tlns-google-oauth2

./: .gitattributes  Cargo.toml  LICENSE  README.md  info.txt  out.json  parsery.py  scopes.rs.jinja  sin.rs  to_rust.py  unparsable.txt
examples/actix-web/: Cargo.toml  README.md
examples/actix-web/src/: main.rs  user.rs
src/: lib.rs  scopes.rs
tlns-google-oauth2/: Cargo.toml  README.md
tlns-google-oauth2-proc/: Cargo.toml  README.md  info.txt
tlns-google-oauth2-proc/src/: lib.rs
tlns-google-oauth2-traits/: Cargo.toml  README.md
tlns-google-oauth2-traits/src/: lib.rs
tlns-google-oauth2/src/: grouped_scopes.rs  lib.rs  scopes.rs
