[package]
name = "tlns-google-oauth2-proc"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/timelessnesses/tlns-google-oauth2"
documentation = "https://docs.rs/tlns-google-oauth2-proc"
readme = "./README.md"
description = "A half-assed procedural macro that generates Scope enums and trait that converting the scopes back and fourth"
license-file = "../LICENSE"

[lib]
proc-macro = true
path = "./src/lib.rs"
include = ["./info.txt"]

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.68", features = ["derive"] }
titlecase = "3.2.0"
url = "2.5.2"
tlns-google-oauth2-traits = { path = "../tlns-google-oauth2-traits" }
