[package]
name = "tlns-google-oauth2-traits"
version = "0.1.1"
edition = "2021"
description = "A bunch of traits for `tlns-google-oauth2-traits`"
license = "MIT"
repository = "https://github.com/timelessnesses/tlns-google-oauth2"
documentation = "https://docs.rs/tlns-google-oauth2-traits"

[dependencies]
