[package]
name = "tlns-google-oauth2"
version = "0.5.1"
edition = "2021"
description = "An enshitificated Google OAuth2 Server Side support for Rust with built in Scopes enum"
license = "MIT"
repository = "https://github.com/timelessnesses/tlns-google-oauth2"
documentation = "https://docs.rs/tlns-google-oauth2"
readme = "./README.md"

[lib]
path = "./src/lib.rs"

[dependencies]
oauth2 = { version = "5.0.0", features = ["reqwest"] }
tlns-google-oauth2-proc = { path = "../tlns-google-oauth2-proc", version = "0.2.2"}
tlns-google-oauth2-traits = { path = "../tlns-google-oauth2-traits", version = "0.1.2"}

[features]
grouped-scopes = []
scopes = []
default = ["grouped-scopes"]
