[package]
name = "tlns-google-oauth2"
version = "0.5.2"
edition = "2021"
description = "An enshitificated Google OAuth2 Server Side support for Rust with built in Scopes enum"
license = "MIT"
repository = "https://github.com/timelessnesses/tlns-google-oauth2"
documentation = "https://docs.rs/tlns-google-oauth2"
readme = "./README.md"

[lib]
path = "./src/lib.rs"

[dependencies]
oauth2 = { version = "5.0.0", features = ["reqwest"] }
pollster = { version = "0.4.0", optional = true }
tlns-google-oauth2-proc = { path = "../tlns-google-oauth2-proc", version = "0.2.3"}
tlns-google-oauth2-traits = { path = "../tlns-google-oauth2-traits", version = "0.1.3"}

[features]
grouped-scopes = []
scopes = []
docs = ["pollster"]
default = ["grouped-scopes", "scopes"]

[package.metadata."docs.rs"]
all-features = true
